# asi-rust

./: .env.example  .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  Caddyfile  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  index.html  package.json  vercel.json
.claude/: settings.json
.claude/skills/deploy/: SKILL.md
.claude/skills/migrate/: SKILL.md
.claude/skills/monitor/: SKILL.md
.claude/skills/release/: SKILL.md
.claude/skills/review/: SKILL.md
.claude/skills/run/: SKILL.md
.claude/skills/test/: SKILL.md
.github/workflows/: ci.yml
crates/asi-ai-sdk/: Cargo.toml
crates/asi-ai-sdk/src/: lib.rs  token.rs  types.rs
crates/asi-ai-sdk/src/agent/: coordinator.rs  deep_agent.rs  explorer.rs  memory.rs  mod.rs  planner.rs  reasoning.rs  reflector.rs  stream.rs  tool.rs  tool_loop.rs
crates/asi-ai-sdk/src/provider/: deepseek.rs  fallback.rs  mod.rs  model_registry.rs  ollama.rs
crates/asi-ai-sdk/tests/: agent_bench.rs  property_tests.rs  provider_tests.rs  tool_loop_tests.rs
crates/asi-analytics/: Cargo.toml
crates/asi-analytics/src/: lib.rs
crates/asi-app/: Cargo.toml
crates/asi-app/src/: app.rs  lib.rs
crates/asi-app/src/auth/: mod.rs  sign_in.rs  sign_up.rs
crates/asi-app/src/components/: footer.rs  mod.rs  navbar.rs
crates/asi-app/src/components/chat/: input_bar.rs  message_item.rs  message_list.rs  mod.rs  reasoning_block.rs  tool_block.rs
crates/asi-app/src/contexts/: mod.rs  user_context.rs
crates/asi-app/src/pages/: about.rs  contact.rs  dashboard.rs  landing.rs  mod.rs  news.rs  services.rs
crates/asi-auth/: Cargo.toml
crates/asi-auth/src/: clerk.rs  lib.rs  middleware.rs  types.rs
crates/asi-auth/tests/: jwt_verify.rs
crates/asi-automation/: Cargo.toml
crates/asi-automation/src/: auto_backup.rs  health_loop.rs  lib.rs  recovery.rs  self_heal.rs  watchdog.rs
crates/asi-business/: Cargo.toml
crates/asi-business/src/: lib.rs
crates/asi-cli/: Cargo.toml
crates/asi-cli/src/: main.rs
crates/asi-compliance/: Cargo.toml
crates/asi-compliance/src/: lib.rs
crates/asi-cortex/: Cargo.toml
crates/asi-cortex/src/: analyzer.rs  decision.rs  lib.rs  monitor.rs  optimizer.rs  predictor.rs
crates/asi-db/: Cargo.toml
crates/asi-db/src/: lib.rs  postgres.rs  schema.rs  session_cleanup.rs  session_store.rs
crates/asi-db/src/queries/: audit.rs  mod.rs  projects.rs  sessions.rs  users.rs
crates/asi-db/tests/: db_integration.rs
crates/asi-defense/: Cargo.toml
crates/asi-defense/src/: adaptive_firewall.rs  auto_response.rs  defense_layers.rs  lib.rs  threat_detector.rs
crates/asi-devops/: Cargo.toml
crates/asi-devops/src/: auto_fixer.rs  deploy_verify.rs  lib.rs  merge_gate.rs  pipeline.rs  (+1 more)
crates/asi-events/: Cargo.toml
crates/asi-evolution/: Cargo.toml
crates/asi-gateway/: Cargo.toml
crates/asi-grpc/: Cargo.toml  build.rs
crates/asi-lib/: Cargo.toml
crates/asi-lib/src/: cache.rs  cache_redis.rs  circuit_breaker.rs  concurrency.rs  config.rs  emitter.rs  errors.rs  flags.rs  lib.rs  logger.rs  prompt_guard.rs  rate_limit.rs  retry.rs  safe_path.rs  telemetry.rs  tier.rs  warmup.rs
crates/asi-lib/src/utils/: async_utils.rs  collections.rs  ids.rs  math.rs  mod.rs  result.rs  strings.rs  time.rs
crates/asi-lib/tests/: cache.rs  collections.rs  errors.rs  flags.rs  prompt_guard.rs  prompt_guard_fuzz.rs  rate_limit.rs  retry.rs  safe_path.rs
crates/asi-loop/: Cargo.toml
crates/asi-mesh/: Cargo.toml
crates/asi-server/: Cargo.toml  build.rs
crates/asi-server/src/: enterprise.rs  error.rs  knowledge_seed.rs  lib.rs  main.rs  middleware.rs  router.rs  shutdown.rs  startup.rs  tls.rs
crates/asi-server/src/agent/: code_agent.rs  config.rs  instructions.rs  mod.rs  review_agent.rs
crates/asi-server/src/agent/tools/: list_directory.rs  mod.rs  read_file.rs  run_command.rs  write_file.rs
crates/asi-server/src/routes/: chat.rs  docs.rs  eval.rs  evolve.rs  feedback.rs  flags.rs  health.rs  metrics.rs  mod.rs  model.rs  search.rs  sessions.rs  stats.rs  tools.rs  user.rs  version.rs
crates/asi-server/tests/: api_integration.rs  contract_tests.rs
crates/asi-twin/: Cargo.toml
docs/: CAPABILITY_MATRIX.md  ENTERPRISE_CERTIFICATION.md  ENTERPRISE_REPORT.md  RISK_REPORT.md  SHAPER_MANIFEST.md  ULTIMATE_REPORT.md
k8s/: deployment.yaml  multi-region.yaml
migrations/: 20260627000001_init.sql  20260628000002_schema_meta.sql
monitoring/: alertmanager.yml  alerts.yml  fluentd.conf  grafana-dashboard.json  prometheus.yml
proto/: asi.proto
scripts/: backup.sh  restore.sh
sdks/python/: setup.py
static/: health.html  index.html  matrix.html  styles.css
static/.well-known/: security.txt
tests/load/: chat-load.js
(+22 files in other folders)
