[package]
name = "asi-ai-sdk"
edition.workspace = true
version.workspace = true

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio-stream = "0.1"
futures-core = "0.3"
