[package]
name = "asi-ai-sdk"
edition.workspace = true
version.workspace = true

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
thiserror.workspace = true
async-trait = "0.1"
reqwest = { version = "0.12", features = ["json", "stream"] }
axum = "0.7"
tokio-stream = "0.1"
futures-core = "0.3"
