[package]
name = "asi-app"
edition.workspace = true
version.workspace = true

[dependencies]
leptos = { version = "0.7", features = ["csr", "ssr"] }
leptos_router = "0.7"
leptos_meta = "0.7"
serde.workspace = true
serde_json.workspace = true
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
gloo-net = "0.6"
web-sys = { version = "0.3", features = [
    "Window",
    "Request",
    "RequestInit",
    "Headers",
    "Response",
    "HtmlTextAreaElement",
    "Document",
    "Element",
    "HtmlElement",
] }
serde-wasm-bindgen = "0.6"
