[package]
name = "asi-auth"
edition.workspace = true
version.workspace = true

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
jsonwebtoken = "10"
reqwest = { version = "0.12", features = ["json"] }
axum = { version = "0.7", features = ["macros"] }
tower = "0.5"
