[package]
name = "asi-lib"
edition.workspace = true
version.workspace = true

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["time"] }
thiserror.workspace = true
regex = "1"
rand = "0.8"
